# ftpsrv

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_release.sh  note
assets/: config.ini  config.ini.template
src/: ftpsrv.c  ftpsrv.h  ftpsrv_socket.h  ftpsrv_vfs.h
src/args/: args.c  args.h
src/log/: log.c  log.h
src/platform/3ds/: main.c
src/platform/nds/: main.c  socket_nds.h
src/platform/nx/: custom_commands.c  custom_commands.h  main.c  main_sysmod.c  sysftp.json  utils.c  utils.h  vfs_nx.c  vfs_nx.h
src/platform/nx/reboot_to_payload/: reboot_to_payload.c  reboot_to_payload.h
src/platform/nx/rtc/: max77620-rtc.c  max77620-rtc.h
src/platform/nx/vfs/: vfs_nx_fs.c  vfs_nx_fs.h  vfs_nx_gc.c  vfs_nx_gc.h  vfs_nx_hdd.c  vfs_nx_hdd.h  vfs_nx_ncm.c  vfs_nx_ncm.h  vfs_nx_none.c  vfs_nx_none.h  vfs_nx_root.c  vfs_nx_root.h  vfs_nx_save.c  vfs_nx_save.h  vfs_nx_stdio.c  vfs_nx_stdio.h  vfs_nx_storage.c  vfs_nx_storage.h
src/platform/stdio/: vfs_stdio.c  vfs_stdio.h
src/platform/unistd/: main.c  socket_unistd.h  vfs_unistd.c  vfs_unistd.h
src/platform/wii/: main.c  meta.xml  socket_wii.h
